--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,15 +18,14 @@ install:
     - IF %PHP%==1 echo extension_dir=ext >> php.ini
     - IF %PHP%==1 echo extension=php_openssl.dll >> php.ini
     - IF %PHP%==1 echo extension=php_mbstring.dll >> php.ini
+    - IF %PHP%==1 echo extension=php_xsl.dll >> php.ini
     - IF %PHP%==1 del /Q *.zip
 
     - cd c:\projects\project
     - echo extension_dir=ext >> c:\php\php.ini
-    - echo extension=php_openssl.dll >> c:\php\php.ini
-    - echo extension=php_mbstring.dll >> c:\php\php.ini
 
     - appveyor DownloadFile https://getcomposer.org/composer.phar
-    - php composer.phar install --no-interaction --prefer-dist --no-scripts --no-progress --no-suggest --optimize-autoloader --classmap-authoritative --ignore-platform-reqs
+    - php composer.phar install --no-interaction --prefer-dist --no-scripts --no-progress --no-suggest --optimize-autoloader --classmap-authoritative
 
 test_script:
     - vendor/bin/tester -o console -s -c c:\php\php.ini -p c:\php\71\php Tests
