--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="Application" default="check">
 
-	<target name="check" depends="lint, phpcpd, phpstan, phpcs, tests, cgi-tests"/>
-	<target name="ci" depends="lint, phpcpd, phpstan, phpcs, tests, cgi-tests, coverage"/>
+	<target name="check" depends="lint, phpcpd, phpstan, phpcs, cgi-tests"/>
+	<target name="ci" depends="lint, phpcpd, phpstan, phpcs, cgi-tests, coverage"/>
 
 	<target name="lint">
 		<exec executable="vendor/bin/parallel-lint" logoutput="true" passthru="true" checkreturn="true">
@@ -55,19 +55,6 @@
 		</exec>
 	</target>
 
-	<target name="tests">
-		<exec executable="vendor/bin/tester" logoutput="true" passthru="true" checkreturn="true">
-			<arg value="-o"/>
-			<arg value="console"/>
-			<arg value="-s"/>
-			<arg value="-p"/>
-			<arg value="php"/>
-			<arg value="-c"/>
-			<arg path="Tests/php.ini"/>
-			<arg path="Tests/"/>
-		</exec>
-	</target>
-
 	<target name="cgi-tests">
 		<exec executable="vendor/bin/tester" logoutput="true" passthru="true" checkreturn="true">
 			<arg value="-o"/>
@@ -87,7 +74,7 @@
 			<arg value="console"/>
 			<arg value="-s"/>
 			<arg value="-p"/>
-			<arg value="phpdbg"/>
+			<arg value="php-cgi"/>
 			<arg value="-c"/>
 			<arg path="Tests/php.ini"/>
 			<arg path="Tests/"/>
