Restriction to 2.0 ini

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"require": {
 		"php": ">=7.1",
 		"klapuch/csrf": "*",
-		"klapuch/ini": "*",
+		"klapuch/ini": "^2.0",
 		"klapuch/log": "*",
 		"klapuch/routing": "*",
 		"klapuch/ui": "*",
