--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ script:
 after_script:
     - >
         wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
-        && php coveralls.phar --verbose --config Tests/.coveralls.yml
-        || true;
+        && php coveralls.phar --verbose --config Tests/.coveralls.yml;
 
 after_failure:
   - for i in $(find Tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
