--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
 		"klapuch/uri": "*"
 	},
 	"require-dev": {
-		"phpstan/phpstan": ">=0.6.0",
 		"jakub-onderka/php-parallel-lint": "^0.9.2",
 		"slevomat/coding-standard": "^2.0.0",
 		"sebastian/phpcpd": "^2.0",
 		"phing/phing": "^2.16",
-		"consistence/coding-standard": "^0.13.0"
+		"consistence/coding-standard": "^0.13.0",
+		"phpstan/phpstan": "^0.7.0"
 	},
 	"autoload": {
 		"psr-4": {
