--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
 		"klapuch/ini": "^2.0",
 		"klapuch/log": "*",
 		"klapuch/routing": "*",
-		"klapuch/ui": "*",
-		"klapuch/uri": "*"
+		"klapuch/uri": "*",
+		"klapuch/output": "*"
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "^0.9.2",
