--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="Application" default="check">
 
-	<target name="check" depends="lint, phpcpd, phpstan, phpcs"/>
-	<target name="ci" depends="lint, phpcpd, phpstan, phpcs"/>
+	<target name="check" depends="lint, phpcpd, phpstan, phpcs, tests"/>
+	<target name="ci" depends="lint, phpcpd, phpstan, phpcs, tests, coverage"/>
 
 	<target name="lint">
 		<exec executable="vendor/bin/parallel-lint" logoutput="true" passthru="true" checkreturn="true">
@@ -47,6 +47,38 @@
 			<arg value="--encoding=utf-8"/>
 			<arg value="--tab-width=4"/>
 			<arg value="-sp"/>
+			<arg path="Core"/>
+		</exec>
+	</target>
+
+	<target name="tests">
+		<exec executable="vendor/bin/tester" logoutput="true" passthru="true" checkreturn="true">
+			<arg value="-o"/>
+			<arg value="console"/>
+			<arg value="-s"/>
+			<arg value="-p"/>
+			<arg value="php-cgi"/>
+			<arg value="-c"/>
+			<arg path="Tests/php.ini"/>
+			<arg path="Tests/"/>
+		</exec>
+	</target>
+
+	<target name="coverage">
+		<exec executable="vendor/bin/tester" logoutput="true" passthru="true" checkreturn="true">
+			<arg value="-o"/>
+			<arg value="console"/>
+			<arg value="-s"/>
+			<arg value="-p"/>
+			<arg value="php-cgi"/>
+			<arg value="-c"/>
+			<arg path="Tests/php.ini"/>
+			<arg value="-d"/>
+			<arg value="extension=xdebug.so"/>
+			<arg path="Tests/"/>
+			<arg value="--coverage"/>
+			<arg value="coverage.xml"/>
+			<arg value="--coverage-src"/>
 			<arg path="Core"/>
 		</exec>
 	</target>
