--- a/composer.json
+++ b/composer.json
@@ -14,20 +14,18 @@
 	"require": {
 		"php": ">=7.1",
 		"klapuch/internal": "*",
-		"klapuch/configuration": "*",
-		"klapuch/log": "*",
-		"klapuch/routing": "*",
-		"klapuch/uri": "*",
 		"klapuch/output": "*"
 	},
 	"require-dev": {
-		"jakub-onderka/php-parallel-lint": "^0.9.2",
-		"slevomat/coding-standard": "^2.0.0",
-		"sebastian/phpcpd": "^4.0",
-		"phing/phing": "^2.16",
-		"consistence/coding-standard": "^0.13.0",
-		"phpstan/phpstan": "^0.7.0",
-		"nette/tester": "^1.7"
+		"nette/tester": "^2.0",
+		"jakub-onderka/php-parallel-lint": "^1.0.0",
+		"slevomat/coding-standard": "^4.8.3",
+		"sebastian/phpcpd": "^4.0.0",
+		"consistence/coding-standard": "^3.0",
+		"phpstan/phpstan": "^0.10.1",
+		"phpstan/phpstan-strict-rules": "*",
+		"phpstan/phpstan-mockery": "^0.10.2",
+		"phing/phing": "^2.16"
 	},
 	"autoload": {
 		"psr-4": {
